--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "chatGpt",
+    "name" : "DWD-chatGpt",
     "appid" : "__UNI__89623DA",
     "description" : "",
     "versionName" : "1.0.0",
